Previous to Previou

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <br/>
                 <div class="pages-div-top">
                     <div class="previous-page-top">
-                        <a href="#" >↤Previous page</a>
+                        <a href="#" >↤Previou page</a>
 
                     </div>
                     <div class="next-page-top">
